html_fundamentals_2 - aldo lambruschini

--- a/html_fundamentals_2/index.html
+++ b/html_fundamentals_2/index.html
@@ -37,7 +37,7 @@
 <p style="background-color: green; line-height: 120%; border: 10px dotted black; border-top: none">I've been in Sales for
     the last 15 years. I started as a telemarketer when I was in High School, from there I became
     a loan officer. A little after that I branched out on my own to open my own Real Estate office. So I have some
-    experience in managing as well. We started to work at Cox Communications as of 2008 and that brought another set of
+    experience in managing as well. I started to work at Cox Communications as of 2008 and that brought another set of
     skills
 </p>
 
