html_fundamentals_1 - Aldo Lambruschini

--- a/html_fundamentals_1/index.html
+++ b/html_fundamentals_1/index.html
@@ -4,7 +4,7 @@
 <h1>Hello, I am Aldo</h1>
 
 <p>My past career experiences consist of Mortgage and Real Estate sales. I've also worked at Cox Communications as a
-    Tech</p>
+    Tech Specialist</p>
 
 <p>By attending LearningFuze I look to gain enough credibility and experience to get my foot in the door in an
     industry that I've always been interested in.
