--- a/html_fundamentals_4/skills.html
+++ b/html_fundamentals_4/skills.html
@@ -15,8 +15,8 @@
     <li><a href="skills.html">Skills</a></li>
     <li><a href="experience.html">Experience</a></li>
 </ul>
-< id="skills-list">
-<ol>
+<ul id="skills-list">
+
     <li>Technical Skills
         <ul class="inner">
 
@@ -39,8 +39,7 @@
             <li>I speak two languages</li>
         </ul>
     </li>
-
-</ol>
+</ul>>
 </body>
 
 
