html_fundamentals_5 - Aldo Lambruschini

--- a/html_fundamentals_5/layout3/index.html
+++ b/html_fundamentals_5/layout3/index.html
@@ -8,18 +8,19 @@
 <div id="title">Title Bar</div>
     <div id="left_nav">Left Nav Bar</div>
         <div id="main_content">
+            <h2>About Me</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's.
                     </p>
-
+            <h2>Skills</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's.
                 </p>
-
+            <h2>Experience</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's.
                 </p>
-
+            <h2>Contact Me</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's.
                 </p>
