--- a/html_forms/feature_set_2.html
+++ b/html_forms/feature_set_2.html
@@ -70,8 +70,6 @@
             font-size: 28px;
             color: white;
 
-
-
         }
 
         input {
@@ -79,7 +77,7 @@
             height:8vh;
             font-size: 14px;
             padding-left: 8px;
-            box-shadow: black 0 2px;gi
+            box-shadow: black 0 2px;
 
         }
         .forma {
@@ -103,7 +101,7 @@
             font-size: 22px;
             color: white;
            text-align: center;
-           
+
 
         }
     </style>
