--- a/js_primitive_data_types/index.html
+++ b/js_primitive_data_types/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>JS Primitive Data</title>
     <script>
-        var firstName='Aldo';
-        var lastName='Lambruschini'
-        var age='33'
+        var firstName = 'Aldo';
+        var lastName = 'Lambruschini';
+        var age = '33';
+        var output1 = 'First name: ' + firstName + ', Last name: ' + lastName + ', age:' + age;
+        var x = 1;
+        var y = 2;
+        var output2 = x + y;
+        var output3 = ''+x+y;
+        var output4 = 'The total of x and y is' + output2;
+
+        console.log(output1);
+
     </script>
 </head>
 <body>
