js_comparisons_conditionals - Aldo Lambruschini

--- a/js_comparisons_conditionals/index.html
+++ b/js_comparisons_conditionals/index.html
@@ -12,6 +12,7 @@
         var output3 = 'mySmallNumber < myBigNumber is ' + (mySmallNumber < myBigNumber);
         var output4 = 'mySmallNumber > myBigNumber is ' + (mySmallNumber > myBigNumber);
         var challenge = (mySmallNumber + myString) === (mySmallNumber + myString);
+       <!-- challenge is true -->
 
 
         var myTruth = true;
@@ -31,6 +32,26 @@
         } else {
             console.log("I'm false")
         }
+        if(myLie == false) {
+            console.log("I'm a true lie!")
+        }
+
+        var myNumber = 4;
+
+        switch (myNumber){
+            case 4 :
+                console.log("I'm true, Case");
+                break;
+            case 1 :
+                console.log("I'm Case 1");
+                break;
+            case 5 :
+                console.log("I'm case 2");
+                break;
+            default :
+                console.log("I'm default");
+                break;
+            }
 
 
     </script>
