js_primitive_data_types - Aldo Lambruschini

--- a/js_primitive_data_types/index.html
+++ b/js_primitive_data_types/index.html
@@ -6,14 +6,17 @@
         var firstName = 'Aldo';
         var lastName = 'Lambruschini';
         var age = '33';
-        var output1 = 'First name: ' + firstName + ', Last name: ' + lastName + ', age:' + age;
+        var output1 = 'First name: ' + firstName +  ' , Last name: ' + lastName + ', age:' + age;
         var x = 1;
         var y = 2;
         var output2 = x + y;
         var output3 = ''+x+y;
-        var output4 = 'The total of x and y is' + output2;
+        var output4 = 'The total of x and y is ' + output2;
 
         console.log(output1);
+        console.log(output2);
+        console.log(output3);
+        console.log(output4);
 
     </script>
 </head>
