js_ref_data_types - Aldo Lambruschini

--- a/js_ref_data_types/index.html
+++ b/js_ref_data_types/index.html
@@ -54,13 +54,13 @@
 
         // FS 2.2
 
-        console.log(student.greeting());
-        console.log(student.aboutMe());
-        console.log(student.answerQuestion());
-        console.log(student.askQuestion());
-        console.log(student.askQuestion());
-        console.log(student.askQuestion());
-        console.log(student.answerQuestion());
+        console.log("Greeting function: ", student.greeting());
+        console.log("About me function: ", student.aboutMe());
+        console.log("Answer question function: ", student.answerQuestion());
+        console.log("Ask question function: " ,student.askQuestion("Where is Waldo?"));
+        console.log("Ask question function: " ,student.askQuestion("Where is Faldo?"));
+        console.log("Ask question function: " ,student.askQuestion("Where is Geraldo?"));
+        console.log("Answer question function: ", student.answerQuestion());
 
         // Quick console.log
 
