js_loops - Aldo Lambruschini

--- a/js_loops/index.html
+++ b/js_loops/index.html
@@ -4,13 +4,72 @@
     <meta charset="UTF-8">
     <title>js_loops</title>
     <script>
-        // FS 1
-        var numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; {
+        //         FS 1
+        var numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
 
-        for(var i = 0, numbersLength = numbers.length; i < numbersLength; i++)
+
+        for (var i = 0, numbersLength = numbers.length; i < numbersLength; i++) {
             console.log(numbers[i]);
+        }
+
+
+        for (var i = (numbersLength - 1); i > -1; i--) {
+            console.log(numbers[i]);
+        }
+
+        for (var i = 0; i < numbersLength; i += 2) {
+            console.log(numbers[i]);
+        }
+
+        var mixedArray = [4, 56, 11, 13, 97, 22, 7, 36, 19, 5, 8, 10];
+
+        for (var i = 0, mixedArrayLength = mixedArray.length; i < mixedArrayLength; i++) {
+            if ((mixedArray[i]) % 2) {
+
+
+                console.log(mixedArray[i]);
+            }
+            else {
+
+            }
+        }
+        //                    FS 2
+
+        var classRoom = {desk1: 'Stu', desk2: 'Peggy', desk3: 'LoneStar', desk4: 'George', desk5: 'Sheldon'};
+        for (var index in classRoom) {
+            console.log(classRoom[index] + " is at " + index);
 
         }
+
+        // Fs 3
+
+        var studentArray = [{name: "Bob", grade: 87}, {name: "Fred", grade: 82}, {
+            name: "George",
+            grade: 93
+        }, {name: "Robert", grade: 85}];
+
+        function findStudent(name) {
+            var output = "";
+            var i = 0;
+            var found = false;
+
+            while (!found && i < studentArray.length) {
+                var student = studentArray[i];
+                if (student.name == name) {
+                    output = "Found " + name + " Grade: " + student.grade;
+                    found = true;
+                }
+                i++;
+            }
+
+            if (!found) {
+                output = "Student " + name + " not found.";
+            }
+                return output;
+            }
+               console.log("Test 1:", findStudent("George"));
+               console.log("Test 2:", findStudent("Fred"));
+               console.log("Test 3:", findStudent("Hank"));
 
     </script>
 </head>
